# NxMeta

./: .gitignore  README.md
face_detection/: face_and_person_detection.py  face_detection.py  onnx_convertor.py
face_detection_plugin/: CMakeLists.txt
face_detection_plugin/src/: FaceDetector.cpp  FaceDetector.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  plugin.cpp  plugin.h
samples/sample_analytics_plugin/: CMakeLists.txt
samples/stub_analytics_plugin/: CMakeLists.txt
